fix spacing issues for NewMeal component

--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -18,6 +18,6 @@
   margin-top: 30px;
 }
 
-.form-group {
-  display: block;
+input {
+  width: 100%;
 }
